# reed-solomon-cli

./: Cargo.toml  README.md  example.txt  lorem.txt
src/: main.rs
