[package]
name        = "rs-cli"
version     = "0.1.0"
edition     = "2021"
authors     = ["Lynn Pepin <lynn@lynndotpy.dev>"]
license     = "MIT"
description = "CLI wrapper for the reed-solomon crate"
repository  = "https://github.com/lynnpepin/reed-solomon-cli"
keywords    = ["utility", "cryptography", "ecc", "bch"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.13", features = ["derive"] }
reed-solomon = "0.2.1"
